<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Products</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="category">Category:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>

</resources>
